--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,6 +67,9 @@
     <h3 style="text-align: center;">Log in</h3>
     <p style="text-align: center;">Enter your email and password below to log in to your account.</p>
     <div th:if="${errorMessage}" th:text="${errorMessage}"></div>
+    <div class="message" th:if="${message != null}">
+        [[${message}]]
+    </div>
     <form th:action="@{/login}" method="post">
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="example@example.com" required>
@@ -74,7 +77,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
 
-        <a href="#" style="text-align: right;">Forgot your password?</a>
+        <a th:href="@{/login/passreset}" style="text-align: right;">Forgot your password?</a>
         <a th:href="@{/registration}" style="text-align: right;">Don't have an account? Sign Up</a>
 
         <button type="submit">Login</button>
