--- a/src/main/resources/templates/emailForm.html
+++ b/src/main/resources/templates/emailForm.html
@@ -6,59 +6,61 @@
     <title>Password Reset</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
             margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            font-family: 'Arial', sans-serif;
+            line-height: 1.5;
+            background-image: url("https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png");
+            background-size: 100% auto;
+            background-position: center center;
+            background-repeat: no-repeat;
             height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .container {
+            max-width: 400px;
             background-color: #ffffff;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-            text-align: center;
         }
 
         h1 {
             margin-bottom: 20px;
             font-size: 24px;
             color: #333;
+            text-align: center;
         }
 
         label {
             display: block;
             margin-bottom: 8px;
+            font-weight: bold;
             font-size: 14px;
             color: #555;
             text-align: left;
         }
 
-        input[type="email"] {
+        input {
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            box-sizing: border-box;
             font-size: 16px;
         }
 
         button {
-            width: 100%;
+            background-color: rgb(0, 0, 0);
+            color: #fff;
             padding: 12px;
-            background-color: #007bff;
-            color: white;
             border: none;
             border-radius: 4px;
-            font-size: 16px;
             cursor: pointer;
+            width: 100%;
+            font-size: 16px;
         }
 
         button:hover {
@@ -69,6 +71,7 @@
             font-size: 14px;
             color: #888;
             margin-top: 10px;
+            text-align: center;
         }
     </style>
 </head>
